# wsl-dashboard

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  wdio.conf.ts
.github/workflows/: ci.yml  release.yml
ai-dating/: Cargo.toml
ai-dating/api-http/: Cargo.toml
ai-dating/api-http/src/: main.rs
ai-dating/app-usecases/: Cargo.toml
ai-dating/app-usecases/src/: analyze_match.rs  dashboard.rs  lib.rs  refresh_stats.rs  sync_profiles.rs
ai-dating/cli/: Cargo.toml
ai-dating/cli/src/: main.rs
ai-dating/core-domain/: Cargo.toml
ai-dating/core-domain/src/: entities.rs  error.rs  ports.rs  services.rs
ai-dating/infra-db/: Cargo.toml
ai-dating/infra-db/src/: lib.rs  migrations.rs  repository.rs
ai-dating/infra-insee/: Cargo.toml
ai-dating/infra-insee/src/: http_client.rs
ai-dating/infra-mcp/: Cargo.toml
ai-dating/infra-mcp/src/: bumble.rs  client.rs  hinge.rs  inmemory.rs  lib.rs  router.rs  tinder.rs
e2e/: README.md  accessibility.spec.ts  browser-navigation.spec.ts  bulk-actions.spec.ts  cross-feature.spec.ts  debug-console.spec.ts  delete-distro.spec.ts  distro-actions.spec.ts  distro-drawer.spec.ts  distro-list.spec.ts  header-actions.spec.ts  keyboard-shortcuts.spec.ts  language-switcher.spec.ts  monitoring.spec.ts  navigation.spec.ts  settings-audit.spec.ts  settings-config.spec.ts  settings-network.spec.ts  settings-optimization.spec.ts  settings-preferences.spec.ts  snapshot-management.spec.ts  terminal.spec.ts  toasts.spec.ts  view-mode.spec.ts
e2e-wdio/specs/: app-launch.spec.ts  error-handling.spec.ts
e2e/fixtures/: tauri-mock.ts
scripts/: README.md  generate-dev-cert.ps1  sign.ps1  test-restore.ps1
src/: README.md  app.css  app.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: fuzz_decode_wsl_output.rs  fuzz_parse_container_state.rs  fuzz_parse_cpu_line.rs  fuzz_parse_df.rs  fuzz_parse_distro_list.rs  fuzz_parse_docker_size.rs  fuzz_parse_ini.rs  fuzz_parse_k8s_nodes.rs  fuzz_parse_k8s_pods.rs  fuzz_parse_meminfo.rs  fuzz_parse_ports.rs  fuzz_parse_proc_net_dev.rs  fuzz_parse_ps_aux.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: README.md  mod.rs  path_utils.rs
src-tauri/src/application/commands/: README.md  create_snapshot.rs  delete_distro.rs  delete_snapshot.rs  mod.rs  restart_distro.rs  restore_snapshot.rs  start_distro.rs  stop_distro.rs
src-tauri/src/application/dto/: README.md  responses.rs
src-tauri/src/application/queries/: README.md  get_distro_details.rs  list_distros.rs  list_snapshots.rs  mod.rs
src-tauri/src/application/services/: monitoring_service.rs
src-tauri/src/domain/: README.md  errors.rs  mod.rs
src-tauri/src/domain/entities/: README.md  distro.rs  docker.rs  iac.rs  mod.rs  monitoring.rs  port_forward.rs  snapshot.rs  wsl_config.rs  wsl_version.rs
src-tauri/src/domain/ports/: README.md  alerting.rs  audit_logger.rs  docker_provider.rs  iac_provider.rs  metrics_repository.rs  mod.rs  monitoring_provider.rs  port_forwarding.rs  snapshot_repository.rs  wsl_manager.rs
src-tauri/src/domain/services/: README.md  distro_service.rs  metrics_aggregator.rs  metrics_collector.rs  mod.rs
src-tauri/src/domain/value_objects/: README.md  distro_name.rs  distro_state.rs  memory_size.rs  mod.rs  snapshot_id.rs  wsl_version.rs
src-tauri/src/infrastructure/: README.md  mod.rs
src-tauri/src/infrastructure/audit/: README.md  adapter.rs
src-tauri/src/infrastructure/debug_log/: README.md  buffer.rs  layer.rs  mod.rs
src-tauri/src/infrastructure/docker/: adapter.rs
src-tauri/src/infrastructure/iac/: adapter.rs
src-tauri/src/infrastructure/monitoring/: README.md  adapter.rs
src-tauri/src/infrastructure/port_forwarding/: README.md  adapter.rs
src-tauri/src/infrastructure/sqlite/: README.md  adapter.rs  alert_repository.rs  metrics_repository.rs  mod.rs  port_forwarding_repository.rs
src-tauri/src/infrastructure/sqlite/migrations/: 001_initial.sql  002_metrics.sql  003_port_forwarding.sql  004_snapshot_default_user.sql  005_extended_metrics.sql
src-tauri/src/infrastructure/terminal/: README.md  adapter.rs
src-tauri/src/infrastructure/wsl_cli/: README.md  adapter.rs  encoding.rs  mod.rs  parser.rs  path_utils.rs
src-tauri/src/presentation/: README.md  events.rs  mod.rs  state.rs  tray.rs
src-tauri/src/presentation/commands/: README.md  audit_commands.rs  debug_commands.rs  distro_commands.rs  docker_commands.rs  iac_commands.rs  mod.rs  monitoring_commands.rs  port_forwarding_commands.rs  settings_commands.rs  snapshot_commands.rs  terminal_commands.rs
src/features/: README.md
src/features/app-preferences/: README.md
src/features/audit-log/: README.md
src/features/distro-list/: README.md
src/features/monitoring-dashboard/: README.md
src/features/port-forwarding/: README.md
src/features/snapshot-list/: README.md
src/features/terminal/: README.md
src/features/wsl-config/: README.md
src/locales/: README.md
src/locales/en/: translation.json
src/locales/es/: translation.json
src/locales/fr/: translation.json
src/locales/zh/: translation.json
src/pages/: README.md
src/pages/distros/: README.md
src/pages/monitoring/: README.md
src/pages/settings/: README.md
src/shared/: README.md
src/shared/api/: README.md  distro-queries.test.ts  distro-queries.ts  events.ts  tauri-client.test.ts  tauri-client.ts  use-tauri-mutation.test.ts  use-tauri-mutation.ts
src/shared/assets/: README.md
src/shared/config/: README.md  i18n.d.ts  i18n.ts  query-client.ts
src/shared/hooks/: README.md  use-debounce.test.ts  use-debug-console.test.ts  use-debug-console.ts  use-dialog-state.ts  use-tauri-event.test.ts  use-tauri-event.ts  use-theme.test.ts  (+1 more)
src/test/: README.md  setup.ts  test-utils.tsx
src/widgets/: README.md
(+195 files in other folders)
