[package]
name = "wsl-nexus"
version = "1.0.8"
description = "Advanced WSL2 management dashboard"
authors = ["muchini"]
edition = "2024"

[lib]
name = "wsl_nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "registry"] }

# Platform utilities
dirs = "6"

# Terminal PTY
portable-pty = "0.9"

# Profiling: CrabNebula DevTools (opt-in via --features devtools)
tauri-plugin-devtools = { version = "2.0.0-rc.2", optional = true }

[features]
default = []
devtools = ["dep:tauri-plugin-devtools"]

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
mockall = "0.14"
tokio-test = "0.4"
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
