[package]
name = "app-usecases"
edition.workspace = true
version.workspace = true

[dependencies]
core-domain = { path = "../core-domain" }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
