[package]
name = "infra-db"
edition.workspace = true
version.workspace = true

[dependencies]
core-domain = { path = "../core-domain" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
