[package]
name = "infra-insee"
edition.workspace = true
version.workspace = true

[dependencies]
core-domain = { path = "../core-domain" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
